fix: resolve text overflow issue in `LatestPostSection` on Samsung and Safari browsers
- Added `overflow-wrap: anywhere` to `h2` element in `LatestPostSection` to prevent text from overflowing the box
- Made small updates to `README` and `.gitignore` files

--- a/src/components/blog/LatestPostSection/LatestPostSection.module.css
+++ b/src/components/blog/LatestPostSection/LatestPostSection.module.css
@@ -37,6 +37,7 @@
 	h2 {
 		font-size: var(--20px);
 		font-weight: var(--font-weight-medium);
+		overflow-wrap: anywhere;
 	}
 
 	&:hover,
